--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
-﻿@using DAIF2021
+﻿@using Microsoft.AspNetCore.Identity;
+@using DAIF2021
 @using DAIF2021.Models
+@using DAIF2021.Models.DataModels
 @using DAIF2021.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
