--- a/Views/Administration/Admin.cshtml
+++ b/Views/Administration/Admin.cshtml
@@ -20,11 +20,11 @@
         <h3>Application Administration</h3>
     </div>
     <div class="card-footer">
-        <a asp-action="Index" asp-controller="Arenas" class="btn btn-sm btn-outline-success">Go to Arenas</a>
+        <a asp-action="IndexSearch" asp-controller="Arenas" class="btn btn-sm btn-outline-success">Go to Arenas</a>
         - Administrate Arenas
     </div>
     <div class="card-footer">
-        <a asp-action="Index" asp-controller="Clubs" class="btn btn-sm btn-outline-success">Go to Clubs</a>
+        <a asp-action="IndexSearch" asp-controller="Clubs" class="btn btn-sm btn-outline-success">Go to Clubs</a>
         - Administrate Clubs
     </div>
     <div class="card-footer">
