--- a/Views/Arenas/Edit.cshtml
+++ b/Views/Arenas/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model DAIF2021.Data.Arena
+﻿@model Arena
 
 @{
     ViewData["Title"] = "Edit";
@@ -44,12 +44,12 @@
                 <span asp-validation-for="Country" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-sm btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div>    
+    <a class="btn btn-sm btn-success" asp-controller="Arenas" asp-action="IndexSearch">Back to Arenas</a>
 </div>
