--- a/Views/Clubs/Delete.cshtml
+++ b/Views/Clubs/Delete.cshtml
@@ -57,7 +57,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-sm btn-danger" />        
+        <a class="btn btn-sm btn-success" asp-controller="Arenas" asp-action="IndexSearch">Back to Arenas</a>
     </form>
 </div>
