--- a/Views/Administration/Admin.cshtml
+++ b/Views/Administration/Admin.cshtml
@@ -28,7 +28,7 @@
         - Administrate Clubs
     </div>
     <div class="card-footer">
-        <a asp-action="ListUsers" asp-controller="Administration" class="btn btn-sm btn-outline-success">Go to Districts</a>
+        <a asp-action="IndexSearch" asp-controller="Districts" class="btn btn-sm btn-outline-success">Go to Districts</a>
         - Administrate Districts
     </div>
     <div class="card-footer">
