--- a/Views/Districts/Create.cshtml
+++ b/Views/Districts/Create.cshtml
@@ -1,33 +1,22 @@
-﻿@model Club
+﻿@model District
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
 <div class="card col-md-6">
     <div class="card-header">
-        <h4>Edit Club : @Html.DisplayFor(model => model.ClubName)</h4>
+        <h4>Register new District</h4>
     </div>
     <div class="card-body">
         <div class="row">
             <div class="col-md-12">
-                <form asp-action="Edit">
+                <form asp-action="Create">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <input type="hidden" asp-for="Id" />
                     <div class="form-group">
-                        <label asp-for="ClubNumber" class="control-label"></label>
-                        <input asp-for="ClubNumber" class="form-control" />
-                        <span asp-validation-for="ClubNumber" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="ClubName" class="control-label"></label>
-                        <input asp-for="ClubName" class="form-control" />
-                        <span asp-validation-for="ClubName" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="ShortName" class="control-label"></label>
-                        <input asp-for="ShortName" class="form-control" />
-                        <span asp-validation-for="ShortName" class="text-danger"></span>
+                        <label asp-for="DistrictName" class="control-label"></label>
+                        <input asp-for="DistrictName" class="form-control" />
+                        <span asp-validation-for="DistrictName" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="StreetAddress" class="control-label"></label>
@@ -50,7 +39,17 @@
                         <span asp-validation-for="Country" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Save" class="btn btn-sm btn-primary" />
+                        <label asp-for="PhoneNumber" class="control-label"></label>
+                        <input asp-for="PhoneNumber" class="form-control" />
+                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Email" class="control-label"></label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Register" class="btn btn-sm btn-primary" />
                     </div>
                 </form>
             </div>
@@ -58,7 +57,8 @@
     </div>
     <div class="card-footer">
         <div>
-            <a class="btn btn-sm btn-success" asp-controller="Clubs" asp-action="IndexSearch">Back to Arenas</a>
+            <a class="btn btn-sm btn-success" asp-controller="Districts" asp-action="IndexSearch">Back to Districts</a>
         </div>
     </div>
 </div>
+
