--- a/Views/Arenas/IndexSearch.cshtml
+++ b/Views/Arenas/IndexSearch.cshtml
@@ -6,41 +6,42 @@
 }
 
 
-    <div class="badge">
-        <div class="col-sm-12">
+    <div class="card col-md-12">
+        <div class="card-header col-md-12 text-center">
             <h6>
                 ALL Arenas - Name - Search
             </h6>
-        </div>
-        <div class="col-sm-12">
-            <h6>
-                <a class="btn btn-sm btn-success" asp-controller="Arenas" asp-action="Create">Register New Arena</a>
-                <a class="btn btn-sm btn-success" asp-controller="Administration" asp-action="Admin">Back to Admin menu</a>
-            </h6>
-        </div>
 
-        <div class="col-sm-12 text-center">
-            <form asp-controller="Arenas" asp-action="IndexSearch">
-                <p>
-                    Arena name: <input type="text" name="SearchString">
+            <div class="card-header col-md-12">
+                <h6>
+                    <a class="btn btn-sm btn-success" asp-controller="Arenas" asp-action="Create">Register New Arena</a>
+                    <a class="btn btn-sm btn-success" asp-controller="Administration" asp-action="Admin">Back to Admin menu</a>
+                </h6>
+            </div>
+            <div class="card-header col-md-12 text-center">
+                <form asp-controller="Arenas" asp-action="IndexSearch">
+                    <p>
+                        Arena name: <input type="text" name="SearchString">
 
-                    <input type="submit" value="Search" />
-                </p>
-            </form>
+                        <input type="submit" value="Search" />
+                    </p>
+                </form>
+            </div>
         </div>
-        <table class="table table-responsive-sm table-striped">
-            <thead>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.ArenaNumber)</th>
-                    <th>@Html.DisplayNameFor(model => model.ArenaName)</th>
-                    <th>@Html.DisplayNameFor(model => model.Address)</th>
-                    <th>@Html.DisplayNameFor(model => model.Country)</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model.OrderBy(a => a.ArenaName))
+        <div class="card-body col-md-12">
+            <table class="table table-responsive-sm table-striped">
+                <thead>
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.ArenaNumber)</th>
+                        <th>@Html.DisplayNameFor(model => model.ArenaName)</th>
+                        <th>@Html.DisplayNameFor(model => model.Address)</th>
+                        <th>@Html.DisplayNameFor(model => model.Country)</th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.OrderBy(a => a.ArenaName))
                 {
                     <tr>
                         <td> @Html.DisplayFor(modelItem => item.ArenaNumber)</td>
@@ -53,6 +54,7 @@
 
                     </tr>
                 }
-            </tbody>
-        </table>        
+                </tbody>
+            </table>
+        </div>
     </div>
