--- a/Views/Districts/IndexSearch.cshtml
+++ b/Views/Districts/IndexSearch.cshtml
@@ -6,55 +6,56 @@
 }
 
 
-<div class="badge">
-    <div class="col-sm-12">
-        <h6>
-            ALL Clubs - Name - Search
-        </h6>
-    </div>
-    <div class="col-sm-12">
-        <h6>
-            <a class="btn btn-sm btn-success" asp-controller="Districts" asp-action="Create">Register New District</a>
-            <a class="btn btn-sm btn-success" asp-controller="Administration" asp-action="Admin">Back to Admin menu</a>
-        </h6>
-    </div>
+    <div class="card col-md-12">
+        <div class="card-header col-md-12 text-center">
+            <h6>
+                ALL Districts - Name - Search
+            </h6>
 
-    <div class="col-sm-12 text-center">
-        <form asp-controller="Districts" asp-action="IndexSearch">
-            <p>
-                Club name: <input type="text" name="SearchString">
+            <div class="card-header col-md-12">
+                <h6>
+                    <a class="btn btn-sm btn-success" asp-controller="Districts" asp-action="Create">Register New District</a>
+                    <a class="btn btn-sm btn-success" asp-controller="Administration" asp-action="Admin">Back to Admin menu</a>
+                </h6>
+            </div>
 
-                <input type="submit" value="Search" />
-            </p>
-        </form>
-    </div>
-    <table class="table table-responsive-sm table-striped">
-        <thead>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.DistrictName)</th>
-                <th>@Html.DisplayNameFor(model => model.Address)</th>
-                <th>@Html.DisplayNameFor(model => model.PhoneNumber)</th>
-                <th>@Html.DisplayNameFor(model => model.Email)</th>
-                <th>@Html.DisplayNameFor(model => model.Country)</th>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.OrderBy(d => d.DistrictName))
+            <div class="card-header col-md-12 text-center">
+                <form asp-controller="Districts" asp-action="IndexSearch">
+                    <p>
+                        District name: <input type="text" name="SearchString">
+
+                        <input type="submit" value="Search" />
+                    </p>
+                </form>
+            </div>
+        </div>
+        <div class="card-body col-md-12">
+            <table class="table table-responsive-sm table-striped">
+                <thead>
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.DistrictName)</th>                        
+                        <th>@Html.DisplayNameFor(model => model.PhoneNumber)</th>
+                        <th>@Html.DisplayNameFor(model => model.Email)</th>
+                        
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.OrderBy(d => d.DistrictName))
             {
-            <tr>
-                <td>@Html.DisplayFor(modelItem => item.DistrictName)</td>
-                <td>@Html.DisplayFor(modelItem => item.Address)</td>
-                <td>@Html.DisplayFor(modelItem => item.PhoneNumber)</td>
-                <td>@Html.DisplayFor(modelItem => item.Email)</td>
-                <td>@Html.DisplayFor(modelItem => item.Country)</td>
+                    <tr>
+                        <td>@Html.DisplayFor(modelItem => item.DistrictName)</td>                        
+                        <td>@Html.DisplayFor(modelItem => item.PhoneNumber)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                        
 
-                <td><a class="btn btn-sm btn-success" asp-controller="Districts" asp-action="Details" asp-route-id="@item.Id">Details</a></td>
-                <td><a class="btn btn-sm btn-success" asp-controller="Districts" asp-action="Edit" asp-route-id="@item.Id">Edit</a></td>
+                        <td><a class="btn btn-sm btn-success" asp-controller="Districts" asp-action="Details" asp-route-id="@item.Id">Details</a></td>
+                        <td><a class="btn btn-sm btn-success" asp-controller="Districts" asp-action="Edit" asp-route-id="@item.Id">Edit</a></td>
 
-            </tr>
+                    </tr>
             }
-        </tbody>
-    </table>
-</div>
+                </tbody>
+            </table>
+        </div>
+    </div>
