Set it all back to where I was this morning  :P

--- a/Views/Clubs/Edit.cshtml
+++ b/Views/Clubs/Edit.cshtml
@@ -58,7 +58,7 @@
     </div>
     <div class="card-footer">
         <div>
-            <a class="btn btn-sm btn-success" asp-controller="Clubs" asp-action="IndexSearch">Back to Arenas</a>
+            <a class="btn btn-sm btn-success" asp-controller="Clubs" asp-action="IndexSearch">Back to Clubs</a>
         </div>
     </div>
 </div>
