--- a/Views/Administration/Admin.cshtml
+++ b/Views/Administration/Admin.cshtml
@@ -36,7 +36,7 @@
         - Administrate Games
     </div>
     <div class="card-footer">
-        <a asp-action="ListUsers" asp-controller="Administration" class="btn btn-sm btn-outline-success">Go to People</a>
+        <a asp-action="IndexSearch" asp-controller="People" class="btn btn-sm btn-outline-success">Go to People</a>
         - Administrate People
     </div>
     <div class="card-footer">
@@ -57,7 +57,7 @@
         <h3>Settings Administration</h3>
     </div>
     <div class="card-footer">
-        <a asp-action="ListRoles" asp-controller="Administration" class="btn btn-sm btn-outline-success">Go to Settings</a>
+        <a asp-action="Settings" asp-controller="Administration" class="btn btn-sm btn-outline-success">Go to Settings</a>
         - Administrate Statuses, Types, e.t.c
     </div>    
 </div>
