--- a/Views/Administration/Admin.cshtml
+++ b/Views/Administration/Admin.cshtml
@@ -51,6 +51,18 @@
         <a asp-action="ListUsers" asp-controller="Administration" class="btn btn-sm btn-outline-success">Go to Tournaments</a>
         - Administrate Tournaments
     </div>
+    <div class="card-footer">
+        <a asp-action="IndexSearch" asp-controller="TSMGames" class="btn btn-sm btn-outline-success">Go to TSMGames</a>
+        - Administrate TSMGames
+    </div>
+    @*<div class="card-footer">
+            <a asp-action="ListUsers" asp-controller="Administration" class="btn btn-sm btn-outline-success">Go to Teams</a>
+            - Administrate Teams
+        </div>
+        <div class="card-footer">
+            <a asp-action="ListUsers" asp-controller="Administration" class="btn btn-sm btn-outline-success">Go to Tournaments</a>
+            - Administrate Tournaments
+        </div>*@
 </div>
 <div class="card card-columns">
     <div class="card-header">
